--- a/sistema.html
+++ b/sistema.html
@@ -23,6 +23,7 @@
     <link rel="manifest" href="./manifest.json">
     <link rel="apple-touch-icon" href="./icon-144x144.png">
     <script src="./sistema.js" defer></script>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall"></script>
 </head>
 <body>
 
