--- a/sistema.html
+++ b/sistema.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Intellisoft VRJ</title>
+    <title>Cartolisse</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
@@ -37,7 +37,7 @@
                     </div>
                     <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Bem-vindo ao Intellisoft VRJ</strong></h1>
                     <p class="mbr-text mbr-fonts-style display-4">
-                        Para uma maior comodidade, você pode clicar no botão <b>Instalar Aplicativo</b> abaixo e o aplicativo será instalado no seu dispositivo.
+                        Pensando sempre no melhor para nossos clientes, clicando em <b>Instalar Aplicativo</b> você terá o nosso aplicativo em seu celular.
                     </p>
                     <div>
                         <pwa-install id="installComponent"></pwa-install>
