--- a/sistema.html
+++ b/sistema.html
@@ -24,6 +24,7 @@
     <link rel="apple-touch-icon" href="./icon-144x144.png">
     <script src="./sistema.js" defer></script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@pwabuilder/pwainstall"></script>
+    <style></style>
 </head>
 <body>
 
