--- a/sistema.html
+++ b/sistema.html
@@ -38,7 +38,7 @@
                     </div>
                     <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Bem-vindo ao Intellisoft VRJ</strong></h1>
                     <p class="mbr-text mbr-fonts-style display-4">
-                        Pensando sempre no melhor para nossos clientes, clicando em <b>Instalar Aplicativo</b> você terá o nosso aplicativo em seu celular.
+                        Pensamos sempre no melhor para nossos clientes, e seguindo esse pensamento se você clicar em <b>Instalar Aplicativo</b> terá acesso ao nosso aplicativo em seu celular.
                     </p>
                     <div>
                         <pwa-install id="installComponent"></pwa-install>
