--- a/offline.html
+++ b/offline.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Offline</title>
 </head>
 <body>
     <section class="py-5 text-center container">
-        <div class="row py-lg-5">
+        <div class="row align-items-center py-lg-5">
+          <div class="col-lg-6 col-md-8 mx-auto">
+            <img src="Assets/400.png" class="img-fluid" alt="404">
+          </div>
+          
           <div class="col-lg-6 col-md-8 mx-auto">
             <h1 class="fw-light">Você está Offline</h1>
             <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
